# apputils

./: Cargo.toml  README.md
examples/: alacritty.rs  config.rs  wallpaper-dl.rs
src/: config.rs  console.rs  dirs.rs  env.rs  lib.rs
