[package]
name = "apputils"
version = "0.1.1"
edition = "2021"
description = "A lightweight Rust crate to help you build awesome tools"
repository = "https://github.com/Stridsvagn69420/apputils.git"
homepage = "https://github.com/Stridsvagn69420/apputils"
documentation = "https://docs.rs/apputils"
authors = ["Stridsvagn69420"]
categories = ["command-line-interface", "config"]
keywords = ["color", "helper"]
exclude = ["/target/", "/.vscode/"]
license = "MIT"
readme = "README.md"

[dependencies]
